fixing navigation on mobile and add new data to the object parts

--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,11 @@
 
 html {
   scroll-behavior: smooth;
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
+}
+html::-webkit-scrollbar {
+  display: none;
 }
 
 .scrollBarHide::-webkit-scrollbar {
